Version 0.1 -- Fixed alignment for tablet screens. Added "Chat on Whatsapp" link in Contact Us section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,7 @@ body {
 .hamburger-button, .navbar-button:hover{
     background-color:#8eeb75;
 }
+
+.feedback-padding{
+    padding-bottom: 5rem;
+}
